# STK

./: .gitignore  MakefileMacOS  README.md  config.status  configure  imgui.ini
Bendow/: CMakeLists.txt  adsr.cpp  arythmetic.cpp  arythmetic.h  buffer.cpp  buffer.h  callback.h  common.cpp  common.h  editor.cpp  editor.h  effect.cpp  effect.h  factory.cpp  filter.cpp  fonts.cpp  fonts.h  graph.cpp  graph.h  lfo.cpp  lfo.h  main.cpp  mixer.cpp  mixer.h  node.cpp  node.h  oscillator.cpp  oscillator.h  parameter.cpp  parameter.h  random.cpp  random.h  record.cpp  record.h  sequencer.cpp  sequencer.h  track.cpp  track.h  utils.h  value.cpp  (+1 more)
Bendow/imgui/: imgui_knobs.cpp
CAPI/: CMakeLists.txt  MakefileLinux  MakefileMacOS  arythmetics.h  buffers.cpp  common.h  deploy.bat  effects.cpp  effects.h  envelopes.cpp  exports.cpp  filters.h  generators.cpp  nodes.h  readers.cpp  streams.cpp  writers.cpp  writers.h
doc/html/: ADSR_8h_source.html  Asymp_8h_source.html  BandedWG_8h_source.html  BeeThree_8h_source.html  BiQuad_8h_source.html  BlitSaw_8h_source.html  BlitSquare_8h_source.html  Blit_8h_source.html  BlowBotl_8h_source.html  BlowHole_8h_source.html  BowTable_8h_source.html  Bowed_8h_source.html  Brass_8h_source.html  Chorus_8h_source.html  Clarinet_8h_source.html  Cubic_8h_source.html  DelayA_8h_source.html  DelayL_8h_source.html  Delay_8h_source.html  Drummer_8h_source.html  Echo_8h_source.html  Effect_8h_source.html  Envelope_8h_source.html  FMVoices_8h_source.html  FM_8h_source.html  FileLoop_8h_source.html  FileRead_8h_source.html  FileWrite_8h_source.html  FileWvIn_8h_source.html  FileWvOut_8h_source.html  Filter_8h_source.html  Fir_8h_source.html  Flute_8h_source.html  FormSwep_8h_source.html  FreeVerb_8h_source.html  Function_8h_source.html  Generator_8h_source.html  Granulate_8h_source.html  Guitar_8h_source.html  HevyMetl_8h_source.html  (+369 more)
include/: Blit.h  BlitSaw.h  Stk.h  UdpSocket.h
projects/Bendow/: CMakeLists.txt  MakefileMacOS  adsr.cpp  adsr.h  arythmetic.cpp  arythmetic.h  common.h  editor.cpp  editor.h  effect.cpp  effect.h  factory.cpp  factory.h  filter.cpp  filter.h  graph.cpp  graph.h  imgui.ini  lfo.cpp  lfo.h  main.cpp  mixer.cpp  node.cpp  node.h  oscillator.cpp  oscillator.h  parameter.cpp  parameter.h  random.cpp  random.h  sequencer.cpp  sequencer.h  track.cpp  track.h  value.cpp  value.h
projects/Bendow/fonts/: sweet16.h
projects/Bendow/imgui/: imconfig.h
projects/CAPI/: .gitignore  CAPI.cpp  CAPI.h  CAPI.sln  CAPI.vcxproj  CAPI.vcxproj.filters  MakefileMacOS  arythmetic.cpp  arythmetics.cpp  arythmetics.h  buffers.cpp  buffers.h  common.cpp  common.h  deploy.bat  effects.cpp  effects.h  envelopes.cpp  envelopes.h  exports.cpp  exports.h  filters.cpp  filters.h  generators.cpp  generators.h  instruments.cpp  instruments.h  nodes.cpp  nodes.h  readers.cpp  readers.h  stream.cpp  stream.h  streams.cpp  streams.h  writers.cpp  writers.h
projects/CAPI/STK/: STK.sln
projects/CAPI/x64/Release/: STK.exp  STK.lib
projects/CAPIBAK/: arythmetics.cpp  arythmetics.h  buffers.cpp  common.cpp  common.h  deploy.bat  effects.cpp  envelopes.h  filters.h  generators.cpp  generators.h  readers.cpp  readers.h  streams.h  writers.cpp
projects/TestSTK/: TestSTK.sln
projects/TestSTK/x64/Release/: TestSTK.iobj  TestSTK.ipdb
projects/Tests/: FourSine.cpp  Tests.vcxproj  Tests.vcxproj.filters
projects/convert2wav/: Convert2Wav  ConvertRaw2Wav  MakefileMacOS  main.cpp  utils.h
projects/demo/: Makefile  stk-demo
projects/effects/: Makefile  MakefileMacOS  effects
projects/eguitar/: Makefile  eguitar
projects/examples/: Makefile  UpgradeLog.htm  audioprobe  bethree  bethree.vcxproj  bethree.vcxproj.filters  controlbee  controlbee.vcxproj  controlbee.vcxproj.filters  crtsine  crtsine.vcxproj  crtsine.vcxproj.filters  duplex  examples.sln  foursine  foursine.vcxproj  foursine.vcxproj.filters  grains  grains.vcxproj  grains.vcxproj.filters  inetIn  inetIn.vcxproj  inetIn.vcxproj.filters  inetOut  inetOut.vcxproj  inetOut.vcxproj.filters  libMakefile  midiprobe  midiprobe.vcxproj  midiprobe.vcxproj.filters  play  play.vcxproj  play.vcxproj.filters  playsmf  playsmf.vcxproj  playsmf.vcxproj.filters  record  record.vcxproj  record.vcxproj.filters  rtsine  (+11 more)
projects/ragamatic/: Makefile  ragamat
projects/sequencer/: BlocCmd.cpp  BlocCmd.h  DlgHelp.cpp  DlgHelp.h  DlgWaveIn.cpp  DlgWaveIn.h  Eros_Ramazzotti_-_Cose_della_vita.mid  MidiSphinx.cpp  MidiSphinx.h  Mixer.cpp  Mixer.h  MixerMdi.cpp  MixerMdi.h  ObjectMidi.cpp  ObjectMidi.h  Resource.h  Rsrc.rc  Sequencer.cpp  Sequencer.h  Sphinx.dev  Sphinx_private.h  Sphinx_private.rc  Standard.h  ToolTip.cpp  ToolTip.h  main.cpp  readme.txt
projects/sequencer/Arrangement/: ArrEditorBox.cpp  ArrEditorBox.h  Arrange.cpp  Arrange.h  ColumnTrack.cpp  ColumnTrack.h  DlgPath.cpp  DlgPath.h  PosBarBox.cpp  PosBarBox.h
projects/sequencer/Editor/: Editor.cpp  Editor.h  KeyboardBox.cpp  KeyboardBox.h  MatrixBox.cpp  MatrixBox.h  PosBarExBox.cpp  PosBarExBox.h
projects/sequencer/List/: ListMdi.cpp  ListMdi.h
projects/sequencer/Options/: DlgClick.cpp  DlgDevice.cpp  DlgInfo.cpp  DlgOptions.h  DlgRecord.cpp  TempoEditor.cpp  TempoEditor.h  TempoMdi.cpp  TempoMdi.h  TempoPosBar.cpp  TempoPosBar.h
projects/sequencer/Resource/: Chisel.cur  Hand2.cur  Rubber.cur  Stick.cur  Thumbs.db
projects/tests/: MakefileMacOS  MakefileMacOSTestLib  SINE  TEST_LIB  sine.cpp  testLib.cpp
projects/tibetant/: CMakeLists.txt  MakefileMacOS  Tibetant  adsr.cpp  adsr.h  arythmetic.cpp  buffer.cpp  buffer.h  callback.h  common.h  effect.cpp  effect.h  filter.h  generator.cpp  generator.h  graph.cpp  imgui.ini  lfo.cpp  lfo.h  main.cpp  mixer.cpp  mixer.h  node.cpp  node.h  oscillator.cpp  oscillator.h  parameter.cpp  parameter.h  random.cpp  random.h  rtsine.cpp  sequencer.cpp  sequencer.h  terminal.h  value.cpp  value.h
projects/tibetant/gl3w/: gl3w.cpp
projects/tibetant/gl3w/GL/: gl3w.h
projects/tibetant/imgui/: imgui_knobs.cpp
src/: BlitSaw.cpp  FileWvOut.cpp  Makefile  Modulate.cpp  Skini.cpp
(+583 files in other folders)
